@@ -4,7 +4,7 @@ LogY=0
 LegendXPos=0.68
 # END PLOT
 
-# BEGIN PLOT /alphadependence/
+# BEGIN PLOT /alphasdependence/
 XLabel=$\alpha_s$
 XMin=0.7
 XMax=1.59
@@ -31,7 +31,7 @@ ErrorBars=1
 # END HISTOGRAM
 
 
-# BEGIN PLOT /alphadependence/I
+# BEGIN PLOT /alphasdependence/I
 Title=$I_{1/2}$
 YMin=0
 YMax=0.301
@@ -50,7 +50,7 @@ YMax=0.301
 # END PLOT
 
 
-# BEGIN PLOT /alphadependence/I2
+# BEGIN PLOT /alphasdependence/I2
 Title=$I_{1/2}"$
 YMin=0
 YMax=0.401
@@ -69,7 +69,7 @@ YMax=0.401
 # END PLOT
 
 
-# BEGIN PLOT /alphadependence/grej20
+# BEGIN PLOT /alphasdependence/grej20
 Title=$g_{\rm rej}_{20}$
 YMin=0.85
 YMax=1.01
@@ -88,7 +88,7 @@ YMax=1.01
 # END PLOT
 
 
-# BEGIN PLOT /alphadependence/grej50
+# BEGIN PLOT /alphasdependence/grej50
 Title=$g^{\rm rej}_{50}$
 YMin=0.75
 YMax=1.01
@@ -107,7 +107,7 @@ YMax=1.01
 # END PLOT
 
 
-# BEGIN PLOT /alphadependence/qrej20
+# BEGIN PLOT /alphasdependence/qrej20
 Title=$q^{\rm rej}_{20}$
 YMin=0.85
 YMax=1.01
@@ -126,7 +126,7 @@ YMax=1.01
 # END PLOT
 
 
-# BEGIN PLOT /alphadependence/qrej50
+# BEGIN PLOT /alphasdependence/qrej50
 Title=$q^{\rm rej}_{50}$
 YMin=0.75
 YMax=1.01
@@ -145,7 +145,7 @@ YMax=1.01
 # END PLOT
 
 
-# BEGIN PLOT /alphadependence/srej
+# BEGIN PLOT /alphasdependence/srej
 Title=$s^{\rm rej}$
 YMin=0.6
 YMax=0.801
